--- a/styles.css
+++ b/styles.css
@@ -625,3 +625,14 @@ article#work .button.large.scrolly {
   }
  
 }
+
+/* Estilos para Scroll*/
+
+body::-webkit-scrollbar{
+  width: 7px;
+}
+
+body::-webkit-scrollbar-thumb{
+  background: #5a2d5a;
+  border-radius: 10px;
+}
